[package]
name = "enum_from_str"
version = "0.1.0"
authors = ["Kalmár Róbert <rfrostkalmar@gmail.com>"]
edition = "2018"
description = "Enable deriving FromStr for enums"
keywords = ["proc", "macro", "derive", "enum", "fromstr"]
license = "MIT"
repository = "https://github.com/dam4rus/enum-from-str-rs.git"
homepage = "https://github.com/dam4rus/enum-from-str-rs"
readme = "README.md"

[dependencies]
enum_from_str_derive = { path = "./derive", version = "0.1.0" }
